--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,4 +8,4 @@
   <body>
     <h2 data-text="Psychedelic...">Psychedelic...</h2>
   </body>
-</html>
+</html> -->
