--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!-- <html lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Text Animation Effects</title>
-    <link rel="stylesheet" href="../imt weekly challenge/CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
     <h2 data-text="Psychedelic...">Psychedelic...</h2>
   </body>
-</html> -->
+</html>
